e2e/tests/cli/snapshots/read/skip_names_wardrobe_peekaboo.snap
---
source: e2e/src/cli.rs
expression: json
---
{
  "aquabreather": {
    "id": 8117,
    "visible": true
  },
  "backpack": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 6
      },
      {
        "id": 1250
      },
      {
        "id": 6
      }
    ],
    "id": 13261,
    "visible": true
  },
  "chest": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1
      }
    ],
    "id": 158,
    "visible": true
  },
  "gloves": {
    "dyes": [
      {
        "id": 1
      },
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1
      }
    ],
    "id": 10293,
    "visible": true
  },
  "head": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 6
      },
      {
        "id": 1
      },
      {
        "id": 1
      }
    ],
    "id": 969,
    "visible": true
  },
  "legs": {
    "dyes": [
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1310
      },
      {
        "id": 1
      }
    ],
    "id": 213,
    "visible": true
  },
  "outfit": {
    "dyes": [
      {
        "id": 1
      },
      {
        "id": 1
      },
      {
        "id": 1
      },
      {
        "id": 1
      }
    ],
    "id": 50,
    "visible": false
  },
  "shoes": {
    "dyes": [
      {
        "id": 6
      },
      {
        "id": 6
      },
      {
        "id": 1310
      },
      {
        "id": 1
      }
    ],
    "id": 172,
    "visible": true
  },
  "shoulders": {
    "dyes": [
      {
        "id": 1310
      },
      {
        "id": 6
      },
      {
        "id": 1
      },
      {
        "id": 1
      }
    ],
    "id": 5793,
    "visible": true
  },
  "weapon_a1": {
    "id": 10772,
    "visible": true
  },
  "weapon_a2": {
    "id": 10799,
    "visible": true
  },
  "weapon_aquatic_a": {
    "id": 4712,
    "visible": true
  },
  "weapon_aquatic_b": {
    "id": 4000,
    "visible": true
  },
  "weapon_b1": {
    "id": 4671,
    "visible": true
  }
}
